syntax = "proto3";
package grpcTest;

service TestService {
    rpc SendMessage(TestMessage)  returns (Reply);
}

message TestMessage {
   string clientName = 1;
   int32 clientId = 2;
   string description = 3;
   repeated MsgItem messageitems = 4;

  enum ItemType {
    TypeX = 0;
    TypeY = 1;
    TypeZ = 2;
  }

   message MsgItem {
     int32 id = 1;
     string itemName = 2;
     int32 itemValue = 3;
     ItemType itemType = 4;
   }
}

message Reply{

}